[gd_scene load_steps=2 format=2]

[ext_resource path="res://空间速算训练.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 302.0
margin_top = 152.0
margin_right = 841.0
margin_bottom = 192.0
size_flags_horizontal = 3

[node name="start" type="Button" parent="HBoxContainer"]
margin_right = 41.0
margin_bottom = 40.0
text = "start"

[node name="stop" type="Button" parent="HBoxContainer"]
margin_left = 45.0
margin_right = 85.0
margin_bottom = 40.0
text = "stop"

[node name="modetitle" type="Label" parent="HBoxContainer"]
margin_left = 89.0
margin_top = 13.0
margin_right = 218.0
margin_bottom = 27.0
text = "math practice mode"

[node name="optionMode" type="OptionButton" parent="HBoxContainer"]
margin_left = 222.0
margin_right = 288.0
margin_bottom = 40.0
text = "mode"
items = [ "mode", null, false, 0, null, "+", null, false, 1, null, "-", null, false, 2, null, "*", null, false, 3, null, "/", null, false, 4, null ]
selected = 0

[node name="optionMode2" type="LineEdit" parent="HBoxContainer"]
margin_left = 292.0
margin_right = 539.0
margin_bottom = 40.0
size_flags_horizontal = 3
placeholder_text = "wait time (in second) input number "

[node name="answer" type="Label" parent="."]
margin_left = 310.0
margin_top = 243.0
margin_right = 359.0
margin_bottom = 257.0
text = "answer:"

[node name="question" type="HBoxContainer" parent="."]
margin_left = 308.0
margin_top = 200.0
margin_right = 539.0
margin_bottom = 240.0

[node name="label" type="Label" parent="question"]
margin_top = 13.0
margin_right = 60.0
margin_bottom = 27.0
text = "question:"

[node name="title" type="Label" parent="question"]
margin_left = 64.0
margin_top = 13.0
margin_right = 124.0
margin_bottom = 27.0
text = "question:"

[node name="answers" type="HBoxContainer" parent="."]
margin_left = 370.0
margin_top = 236.0
margin_right = 552.0
margin_bottom = 276.0

[node name="anserX" type="LineEdit" parent="answers"]
margin_right = 58.0
margin_bottom = 40.0

[node name="anserY" type="LineEdit" parent="answers"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 40.0

[node name="anserZ" type="LineEdit" parent="answers"]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 40.0

[node name="commit" type="Button" parent="answers"]
margin_left = 186.0
margin_right = 248.0
margin_bottom = 40.0
text = "commit"

[node name="Label" type="Label" parent="."]
margin_left = 627.0
margin_top = 239.0
margin_right = 667.0
margin_bottom = 253.0
text = "correctly?:"

[node name="RightType" type="Label" parent="."]
margin_left = 700.0
margin_top = 237.0
margin_right = 766.0
margin_bottom = 251.0
text = "null"

[connection signal="pressed" from="HBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/stop" to="." method="_on_stop_pressed"]
[connection signal="item_selected" from="HBoxContainer/optionMode" to="." method="_on_optionMode_item_selected"]
[connection signal="text_changed" from="HBoxContainer/optionMode2" to="." method="_on_optionMode2_text_changed"]
[connection signal="pressed" from="answers/commit" to="." method="_on_commit_pressed"]
